# EmailImport

./: .gitignore  README.md  manage.py  pyproject.toml
EmailImport/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  api.py  consumers.py  models.py  routing.py  serializers.py
static/: scripts.js
templates/: index.html
