[tool.poetry]
name = "emailimport"
version = "0.1.0"
description = ""
authors = ["Shecspi <shecspi@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"
djangorestframework = "^3.14"
channels = {version = "^4.0", extras = ["daphne"]}
channels-redis = "^4.1"
psycopg2-binary = "^2.9.9"
imap-tools = "^1.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
